transpiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IDENTIF_ILEGAL

Grammar

Rule 0     S' -> start
Rule 1     start -> INICIO PUNTO list_sentences FIN PUNTO
Rule 2     start -> INICIO PUNTO FIN PUNTO
Rule 3     list_sentences -> list_sentences sentence
Rule 4     list_sentences -> sentence
Rule 5     sentence -> datatype list_id PUNTO
Rule 6     sentence -> control_statement
Rule 7     sentence -> assignment_statement PUNTO
Rule 8     sentence -> system_function_call_statement PUNTO
Rule 9     list_id -> list_id COMA IDENTIF
Rule 10    list_id -> IDENTIF
Rule 11    control_statement -> if_statement
Rule 12    control_statement -> while_statement
Rule 13    if_statement -> CUANDO expression ENTONCES list_sentences LISTO
Rule 14    if_statement -> CUANDO expression ENTONCES list_sentences SINO list_sentences LISTO
Rule 15    while_statement -> MIENTRAS expression ENTONCES list_sentences LISTO
Rule 16    assignment_statement -> IDENTIF IGUAL expression
Rule 17    assignment_statement -> IDENTIF IGUAL CADENA_VALOR
Rule 18    system_function_call_statement -> IMPRIMIR PARIZ list_arg PARDE
Rule 19    system_function_call_statement -> LEER PARIZ list_id PARDE
Rule 20    list_arg -> list_arg COMA arg
Rule 21    list_arg -> arg
Rule 22    arg -> expression
Rule 23    arg -> CADENA_VALOR
Rule 24    datatype -> ENTERO
Rule 25    datatype -> CADENA
Rule 26    datatype -> REAL
Rule 27    datatype -> BOOLEANO
Rule 28    expression -> expression MAS expression
Rule 29    expression -> expression MENOS expression
Rule 30    expression -> expression POR expression
Rule 31    expression -> expression ENTRE expression
Rule 32    expression -> expression MAYORQUE expression
Rule 33    expression -> expression MENORQUE expression
Rule 34    expression -> expression MAYOR_IGUAL expression
Rule 35    expression -> expression MENOR_IGUAL expression
Rule 36    expression -> expression EQUIVALE expression
Rule 37    expression -> expression DIFIERE expression
Rule 38    expression -> expression O expression
Rule 39    expression -> expression Y expression
Rule 40    expression -> NO expression
Rule 41    expression -> PARIZ expression PARDE
Rule 42    expression -> ABRE_RPN special_expression CIERRA_RPN
Rule 43    expression -> IDENTIF
Rule 44    expression -> NUMERO
Rule 45    expression -> boolean_value
Rule 46    expression -> MENOS expression
Rule 47    boolean_value -> CIERTO
Rule 48    boolean_value -> FALSO
Rule 49    special_expression -> special_expression special_expression MAS
Rule 50    special_expression -> special_expression special_expression MENOS
Rule 51    special_expression -> special_expression special_expression POR
Rule 52    special_expression -> special_expression special_expression ENTRE
Rule 53    special_expression -> special_expression special_expression MAYORQUE
Rule 54    special_expression -> special_expression special_expression MENORQUE
Rule 55    special_expression -> special_expression special_expression MAYOR_IGUAL
Rule 56    special_expression -> special_expression special_expression MENOR_IGUAL
Rule 57    special_expression -> special_expression special_expression EQUIVALE
Rule 58    special_expression -> special_expression special_expression DIFIERE
Rule 59    special_expression -> special_expression special_expression O
Rule 60    special_expression -> special_expression special_expression Y
Rule 61    special_expression -> NO special_expression
Rule 62    special_expression -> IDENTIF
Rule 63    special_expression -> NUMERO
Rule 64    special_expression -> boolean_value

Terminals, with rules where they appear

ABRE_RPN             : 42
BOOLEANO             : 27
CADENA               : 25
CADENA_VALOR         : 17 23
CIERRA_RPN           : 42
CIERTO               : 47
COMA                 : 9 20
CUANDO               : 13 14
DIFIERE              : 37 58
ENTERO               : 24
ENTONCES             : 13 14 15
ENTRE                : 31 52
EQUIVALE             : 36 57
FALSO                : 48
FIN                  : 1 2
IDENTIF              : 9 10 16 17 43 62
IDENTIF_ILEGAL       : 
IGUAL                : 16 17
IMPRIMIR             : 18
INICIO               : 1 2
LEER                 : 19
LISTO                : 13 14 15
MAS                  : 28 49
MAYORQUE             : 32 53
MAYOR_IGUAL          : 34 55
MENORQUE             : 33 54
MENOR_IGUAL          : 35 56
MENOS                : 29 46 50
MIENTRAS             : 15
NO                   : 40 61
NUMERO               : 44 63
O                    : 38 59
PARDE                : 18 19 41
PARIZ                : 18 19 41
POR                  : 30 51
PUNTO                : 1 1 2 2 5 7 8
REAL                 : 26
SINO                 : 14
Y                    : 39 60
error                : 

Nonterminals, with rules where they appear

arg                  : 20 21
assignment_statement : 7
boolean_value        : 45 64
control_statement    : 6
datatype             : 5
expression           : 13 14 15 16 22 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 46
if_statement         : 11
list_arg             : 18 20
list_id              : 5 9 19
list_sentences       : 1 3 13 14 14 15
sentence             : 3 4
special_expression   : 42 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61
start                : 0
system_function_call_statement : 8
while_statement      : 12

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . INICIO PUNTO list_sentences FIN PUNTO
    (2) start -> . INICIO PUNTO FIN PUNTO

    INICIO          shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> INICIO . PUNTO list_sentences FIN PUNTO
    (2) start -> INICIO . PUNTO FIN PUNTO

    PUNTO           shift and go to state 3


state 3

    (1) start -> INICIO PUNTO . list_sentences FIN PUNTO
    (2) start -> INICIO PUNTO . FIN PUNTO
    (3) list_sentences -> . list_sentences sentence
    (4) list_sentences -> . sentence
    (5) sentence -> . datatype list_id PUNTO
    (6) sentence -> . control_statement
    (7) sentence -> . assignment_statement PUNTO
    (8) sentence -> . system_function_call_statement PUNTO
    (24) datatype -> . ENTERO
    (25) datatype -> . CADENA
    (26) datatype -> . REAL
    (27) datatype -> . BOOLEANO
    (11) control_statement -> . if_statement
    (12) control_statement -> . while_statement
    (16) assignment_statement -> . IDENTIF IGUAL expression
    (17) assignment_statement -> . IDENTIF IGUAL CADENA_VALOR
    (18) system_function_call_statement -> . IMPRIMIR PARIZ list_arg PARDE
    (19) system_function_call_statement -> . LEER PARIZ list_id PARDE
    (13) if_statement -> . CUANDO expression ENTONCES list_sentences LISTO
    (14) if_statement -> . CUANDO expression ENTONCES list_sentences SINO list_sentences LISTO
    (15) while_statement -> . MIENTRAS expression ENTONCES list_sentences LISTO

    FIN             shift and go to state 5
    ENTERO          shift and go to state 11
    CADENA          shift and go to state 12
    REAL            shift and go to state 13
    BOOLEANO        shift and go to state 14
    IDENTIF         shift and go to state 17
    IMPRIMIR        shift and go to state 18
    LEER            shift and go to state 19
    CUANDO          shift and go to state 20
    MIENTRAS        shift and go to state 21

    list_sentences                 shift and go to state 4
    sentence                       shift and go to state 6
    datatype                       shift and go to state 7
    control_statement              shift and go to state 8
    assignment_statement           shift and go to state 9
    system_function_call_statement shift and go to state 10
    if_statement                   shift and go to state 15
    while_statement                shift and go to state 16

state 4

    (1) start -> INICIO PUNTO list_sentences . FIN PUNTO
    (3) list_sentences -> list_sentences . sentence
    (5) sentence -> . datatype list_id PUNTO
    (6) sentence -> . control_statement
    (7) sentence -> . assignment_statement PUNTO
    (8) sentence -> . system_function_call_statement PUNTO
    (24) datatype -> . ENTERO
    (25) datatype -> . CADENA
    (26) datatype -> . REAL
    (27) datatype -> . BOOLEANO
    (11) control_statement -> . if_statement
    (12) control_statement -> . while_statement
    (16) assignment_statement -> . IDENTIF IGUAL expression
    (17) assignment_statement -> . IDENTIF IGUAL CADENA_VALOR
    (18) system_function_call_statement -> . IMPRIMIR PARIZ list_arg PARDE
    (19) system_function_call_statement -> . LEER PARIZ list_id PARDE
    (13) if_statement -> . CUANDO expression ENTONCES list_sentences LISTO
    (14) if_statement -> . CUANDO expression ENTONCES list_sentences SINO list_sentences LISTO
    (15) while_statement -> . MIENTRAS expression ENTONCES list_sentences LISTO

    FIN             shift and go to state 22
    ENTERO          shift and go to state 11
    CADENA          shift and go to state 12
    REAL            shift and go to state 13
    BOOLEANO        shift and go to state 14
    IDENTIF         shift and go to state 17
    IMPRIMIR        shift and go to state 18
    LEER            shift and go to state 19
    CUANDO          shift and go to state 20
    MIENTRAS        shift and go to state 21

    sentence                       shift and go to state 23
    datatype                       shift and go to state 7
    control_statement              shift and go to state 8
    assignment_statement           shift and go to state 9
    system_function_call_statement shift and go to state 10
    if_statement                   shift and go to state 15
    while_statement                shift and go to state 16

state 5

    (2) start -> INICIO PUNTO FIN . PUNTO

    PUNTO           shift and go to state 24


state 6

    (4) list_sentences -> sentence .

    FIN             reduce using rule 4 (list_sentences -> sentence .)
    ENTERO          reduce using rule 4 (list_sentences -> sentence .)
    CADENA          reduce using rule 4 (list_sentences -> sentence .)
    REAL            reduce using rule 4 (list_sentences -> sentence .)
    BOOLEANO        reduce using rule 4 (list_sentences -> sentence .)
    IDENTIF         reduce using rule 4 (list_sentences -> sentence .)
    IMPRIMIR        reduce using rule 4 (list_sentences -> sentence .)
    LEER            reduce using rule 4 (list_sentences -> sentence .)
    CUANDO          reduce using rule 4 (list_sentences -> sentence .)
    MIENTRAS        reduce using rule 4 (list_sentences -> sentence .)
    LISTO           reduce using rule 4 (list_sentences -> sentence .)
    SINO            reduce using rule 4 (list_sentences -> sentence .)


state 7

    (5) sentence -> datatype . list_id PUNTO
    (9) list_id -> . list_id COMA IDENTIF
    (10) list_id -> . IDENTIF

    IDENTIF         shift and go to state 26

    list_id                        shift and go to state 25

state 8

    (6) sentence -> control_statement .

    FIN             reduce using rule 6 (sentence -> control_statement .)
    ENTERO          reduce using rule 6 (sentence -> control_statement .)
    CADENA          reduce using rule 6 (sentence -> control_statement .)
    REAL            reduce using rule 6 (sentence -> control_statement .)
    BOOLEANO        reduce using rule 6 (sentence -> control_statement .)
    IDENTIF         reduce using rule 6 (sentence -> control_statement .)
    IMPRIMIR        reduce using rule 6 (sentence -> control_statement .)
    LEER            reduce using rule 6 (sentence -> control_statement .)
    CUANDO          reduce using rule 6 (sentence -> control_statement .)
    MIENTRAS        reduce using rule 6 (sentence -> control_statement .)
    LISTO           reduce using rule 6 (sentence -> control_statement .)
    SINO            reduce using rule 6 (sentence -> control_statement .)


state 9

    (7) sentence -> assignment_statement . PUNTO

    PUNTO           shift and go to state 27


state 10

    (8) sentence -> system_function_call_statement . PUNTO

    PUNTO           shift and go to state 28


state 11

    (24) datatype -> ENTERO .

    IDENTIF         reduce using rule 24 (datatype -> ENTERO .)


state 12

    (25) datatype -> CADENA .

    IDENTIF         reduce using rule 25 (datatype -> CADENA .)


state 13

    (26) datatype -> REAL .

    IDENTIF         reduce using rule 26 (datatype -> REAL .)


state 14

    (27) datatype -> BOOLEANO .

    IDENTIF         reduce using rule 27 (datatype -> BOOLEANO .)


state 15

    (11) control_statement -> if_statement .

    FIN             reduce using rule 11 (control_statement -> if_statement .)
    ENTERO          reduce using rule 11 (control_statement -> if_statement .)
    CADENA          reduce using rule 11 (control_statement -> if_statement .)
    REAL            reduce using rule 11 (control_statement -> if_statement .)
    BOOLEANO        reduce using rule 11 (control_statement -> if_statement .)
    IDENTIF         reduce using rule 11 (control_statement -> if_statement .)
    IMPRIMIR        reduce using rule 11 (control_statement -> if_statement .)
    LEER            reduce using rule 11 (control_statement -> if_statement .)
    CUANDO          reduce using rule 11 (control_statement -> if_statement .)
    MIENTRAS        reduce using rule 11 (control_statement -> if_statement .)
    LISTO           reduce using rule 11 (control_statement -> if_statement .)
    SINO            reduce using rule 11 (control_statement -> if_statement .)


state 16

    (12) control_statement -> while_statement .

    FIN             reduce using rule 12 (control_statement -> while_statement .)
    ENTERO          reduce using rule 12 (control_statement -> while_statement .)
    CADENA          reduce using rule 12 (control_statement -> while_statement .)
    REAL            reduce using rule 12 (control_statement -> while_statement .)
    BOOLEANO        reduce using rule 12 (control_statement -> while_statement .)
    IDENTIF         reduce using rule 12 (control_statement -> while_statement .)
    IMPRIMIR        reduce using rule 12 (control_statement -> while_statement .)
    LEER            reduce using rule 12 (control_statement -> while_statement .)
    CUANDO          reduce using rule 12 (control_statement -> while_statement .)
    MIENTRAS        reduce using rule 12 (control_statement -> while_statement .)
    LISTO           reduce using rule 12 (control_statement -> while_statement .)
    SINO            reduce using rule 12 (control_statement -> while_statement .)


state 17

    (16) assignment_statement -> IDENTIF . IGUAL expression
    (17) assignment_statement -> IDENTIF . IGUAL CADENA_VALOR

    IGUAL           shift and go to state 29


state 18

    (18) system_function_call_statement -> IMPRIMIR . PARIZ list_arg PARDE

    PARIZ           shift and go to state 30


state 19

    (19) system_function_call_statement -> LEER . PARIZ list_id PARDE

    PARIZ           shift and go to state 31


state 20

    (13) if_statement -> CUANDO . expression ENTONCES list_sentences LISTO
    (14) if_statement -> CUANDO . expression ENTONCES list_sentences SINO list_sentences LISTO
    (28) expression -> . expression MAS expression
    (29) expression -> . expression MENOS expression
    (30) expression -> . expression POR expression
    (31) expression -> . expression ENTRE expression
    (32) expression -> . expression MAYORQUE expression
    (33) expression -> . expression MENORQUE expression
    (34) expression -> . expression MAYOR_IGUAL expression
    (35) expression -> . expression MENOR_IGUAL expression
    (36) expression -> . expression EQUIVALE expression
    (37) expression -> . expression DIFIERE expression
    (38) expression -> . expression O expression
    (39) expression -> . expression Y expression
    (40) expression -> . NO expression
    (41) expression -> . PARIZ expression PARDE
    (42) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (43) expression -> . IDENTIF
    (44) expression -> . NUMERO
    (45) expression -> . boolean_value
    (46) expression -> . MENOS expression
    (47) boolean_value -> . CIERTO
    (48) boolean_value -> . FALSO

    NO              shift and go to state 34
    PARIZ           shift and go to state 35
    ABRE_RPN        shift and go to state 36
    IDENTIF         shift and go to state 37
    NUMERO          shift and go to state 38
    MENOS           shift and go to state 33
    CIERTO          shift and go to state 40
    FALSO           shift and go to state 41

    expression                     shift and go to state 32
    boolean_value                  shift and go to state 39

state 21

    (15) while_statement -> MIENTRAS . expression ENTONCES list_sentences LISTO
    (28) expression -> . expression MAS expression
    (29) expression -> . expression MENOS expression
    (30) expression -> . expression POR expression
    (31) expression -> . expression ENTRE expression
    (32) expression -> . expression MAYORQUE expression
    (33) expression -> . expression MENORQUE expression
    (34) expression -> . expression MAYOR_IGUAL expression
    (35) expression -> . expression MENOR_IGUAL expression
    (36) expression -> . expression EQUIVALE expression
    (37) expression -> . expression DIFIERE expression
    (38) expression -> . expression O expression
    (39) expression -> . expression Y expression
    (40) expression -> . NO expression
    (41) expression -> . PARIZ expression PARDE
    (42) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (43) expression -> . IDENTIF
    (44) expression -> . NUMERO
    (45) expression -> . boolean_value
    (46) expression -> . MENOS expression
    (47) boolean_value -> . CIERTO
    (48) boolean_value -> . FALSO

    NO              shift and go to state 34
    PARIZ           shift and go to state 35
    ABRE_RPN        shift and go to state 36
    IDENTIF         shift and go to state 37
    NUMERO          shift and go to state 38
    MENOS           shift and go to state 33
    CIERTO          shift and go to state 40
    FALSO           shift and go to state 41

    expression                     shift and go to state 42
    boolean_value                  shift and go to state 39

state 22

    (1) start -> INICIO PUNTO list_sentences FIN . PUNTO

    PUNTO           shift and go to state 43


state 23

    (3) list_sentences -> list_sentences sentence .

    FIN             reduce using rule 3 (list_sentences -> list_sentences sentence .)
    ENTERO          reduce using rule 3 (list_sentences -> list_sentences sentence .)
    CADENA          reduce using rule 3 (list_sentences -> list_sentences sentence .)
    REAL            reduce using rule 3 (list_sentences -> list_sentences sentence .)
    BOOLEANO        reduce using rule 3 (list_sentences -> list_sentences sentence .)
    IDENTIF         reduce using rule 3 (list_sentences -> list_sentences sentence .)
    IMPRIMIR        reduce using rule 3 (list_sentences -> list_sentences sentence .)
    LEER            reduce using rule 3 (list_sentences -> list_sentences sentence .)
    CUANDO          reduce using rule 3 (list_sentences -> list_sentences sentence .)
    MIENTRAS        reduce using rule 3 (list_sentences -> list_sentences sentence .)
    LISTO           reduce using rule 3 (list_sentences -> list_sentences sentence .)
    SINO            reduce using rule 3 (list_sentences -> list_sentences sentence .)


state 24

    (2) start -> INICIO PUNTO FIN PUNTO .

    $end            reduce using rule 2 (start -> INICIO PUNTO FIN PUNTO .)


state 25

    (5) sentence -> datatype list_id . PUNTO
    (9) list_id -> list_id . COMA IDENTIF

    PUNTO           shift and go to state 44
    COMA            shift and go to state 45


state 26

    (10) list_id -> IDENTIF .

    PUNTO           reduce using rule 10 (list_id -> IDENTIF .)
    COMA            reduce using rule 10 (list_id -> IDENTIF .)
    PARDE           reduce using rule 10 (list_id -> IDENTIF .)


state 27

    (7) sentence -> assignment_statement PUNTO .

    FIN             reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    ENTERO          reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    CADENA          reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    REAL            reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    BOOLEANO        reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    IDENTIF         reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    IMPRIMIR        reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    LEER            reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    CUANDO          reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    MIENTRAS        reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    LISTO           reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    SINO            reduce using rule 7 (sentence -> assignment_statement PUNTO .)


state 28

    (8) sentence -> system_function_call_statement PUNTO .

    FIN             reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    ENTERO          reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    CADENA          reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    REAL            reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    BOOLEANO        reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    IDENTIF         reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    IMPRIMIR        reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    LEER            reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    CUANDO          reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    MIENTRAS        reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    LISTO           reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    SINO            reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)


state 29

    (16) assignment_statement -> IDENTIF IGUAL . expression
    (17) assignment_statement -> IDENTIF IGUAL . CADENA_VALOR
    (28) expression -> . expression MAS expression
    (29) expression -> . expression MENOS expression
    (30) expression -> . expression POR expression
    (31) expression -> . expression ENTRE expression
    (32) expression -> . expression MAYORQUE expression
    (33) expression -> . expression MENORQUE expression
    (34) expression -> . expression MAYOR_IGUAL expression
    (35) expression -> . expression MENOR_IGUAL expression
    (36) expression -> . expression EQUIVALE expression
    (37) expression -> . expression DIFIERE expression
    (38) expression -> . expression O expression
    (39) expression -> . expression Y expression
    (40) expression -> . NO expression
    (41) expression -> . PARIZ expression PARDE
    (42) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (43) expression -> . IDENTIF
    (44) expression -> . NUMERO
    (45) expression -> . boolean_value
    (46) expression -> . MENOS expression
    (47) boolean_value -> . CIERTO
    (48) boolean_value -> . FALSO

    CADENA_VALOR    shift and go to state 47
    NO              shift and go to state 34
    PARIZ           shift and go to state 35
    ABRE_RPN        shift and go to state 36
    IDENTIF         shift and go to state 37
    NUMERO          shift and go to state 38
    MENOS           shift and go to state 33
    CIERTO          shift and go to state 40
    FALSO           shift and go to state 41

    expression                     shift and go to state 46
    boolean_value                  shift and go to state 39

state 30

    (18) system_function_call_statement -> IMPRIMIR PARIZ . list_arg PARDE
    (20) list_arg -> . list_arg COMA arg
    (21) list_arg -> . arg
    (22) arg -> . expression
    (23) arg -> . CADENA_VALOR
    (28) expression -> . expression MAS expression
    (29) expression -> . expression MENOS expression
    (30) expression -> . expression POR expression
    (31) expression -> . expression ENTRE expression
    (32) expression -> . expression MAYORQUE expression
    (33) expression -> . expression MENORQUE expression
    (34) expression -> . expression MAYOR_IGUAL expression
    (35) expression -> . expression MENOR_IGUAL expression
    (36) expression -> . expression EQUIVALE expression
    (37) expression -> . expression DIFIERE expression
    (38) expression -> . expression O expression
    (39) expression -> . expression Y expression
    (40) expression -> . NO expression
    (41) expression -> . PARIZ expression PARDE
    (42) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (43) expression -> . IDENTIF
    (44) expression -> . NUMERO
    (45) expression -> . boolean_value
    (46) expression -> . MENOS expression
    (47) boolean_value -> . CIERTO
    (48) boolean_value -> . FALSO

    CADENA_VALOR    shift and go to state 51
    NO              shift and go to state 34
    PARIZ           shift and go to state 35
    ABRE_RPN        shift and go to state 36
    IDENTIF         shift and go to state 37
    NUMERO          shift and go to state 38
    MENOS           shift and go to state 33
    CIERTO          shift and go to state 40
    FALSO           shift and go to state 41

    list_arg                       shift and go to state 48
    arg                            shift and go to state 49
    expression                     shift and go to state 50
    boolean_value                  shift and go to state 39

state 31

    (19) system_function_call_statement -> LEER PARIZ . list_id PARDE
    (9) list_id -> . list_id COMA IDENTIF
    (10) list_id -> . IDENTIF

    IDENTIF         shift and go to state 26

    list_id                        shift and go to state 52

state 32

    (13) if_statement -> CUANDO expression . ENTONCES list_sentences LISTO
    (14) if_statement -> CUANDO expression . ENTONCES list_sentences SINO list_sentences LISTO
    (28) expression -> expression . MAS expression
    (29) expression -> expression . MENOS expression
    (30) expression -> expression . POR expression
    (31) expression -> expression . ENTRE expression
    (32) expression -> expression . MAYORQUE expression
    (33) expression -> expression . MENORQUE expression
    (34) expression -> expression . MAYOR_IGUAL expression
    (35) expression -> expression . MENOR_IGUAL expression
    (36) expression -> expression . EQUIVALE expression
    (37) expression -> expression . DIFIERE expression
    (38) expression -> expression . O expression
    (39) expression -> expression . Y expression

    ENTONCES        shift and go to state 53
    MAS             shift and go to state 54
    MENOS           shift and go to state 55
    POR             shift and go to state 56
    ENTRE           shift and go to state 57
    MAYORQUE        shift and go to state 58
    MENORQUE        shift and go to state 59
    MAYOR_IGUAL     shift and go to state 60
    MENOR_IGUAL     shift and go to state 61
    EQUIVALE        shift and go to state 62
    DIFIERE         shift and go to state 63
    O               shift and go to state 64
    Y               shift and go to state 65


state 33

    (46) expression -> MENOS . expression
    (28) expression -> . expression MAS expression
    (29) expression -> . expression MENOS expression
    (30) expression -> . expression POR expression
    (31) expression -> . expression ENTRE expression
    (32) expression -> . expression MAYORQUE expression
    (33) expression -> . expression MENORQUE expression
    (34) expression -> . expression MAYOR_IGUAL expression
    (35) expression -> . expression MENOR_IGUAL expression
    (36) expression -> . expression EQUIVALE expression
    (37) expression -> . expression DIFIERE expression
    (38) expression -> . expression O expression
    (39) expression -> . expression Y expression
    (40) expression -> . NO expression
    (41) expression -> . PARIZ expression PARDE
    (42) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (43) expression -> . IDENTIF
    (44) expression -> . NUMERO
    (45) expression -> . boolean_value
    (46) expression -> . MENOS expression
    (47) boolean_value -> . CIERTO
    (48) boolean_value -> . FALSO

    NO              shift and go to state 34
    PARIZ           shift and go to state 35
    ABRE_RPN        shift and go to state 36
    IDENTIF         shift and go to state 37
    NUMERO          shift and go to state 38
    MENOS           shift and go to state 33
    CIERTO          shift and go to state 40
    FALSO           shift and go to state 41

    expression                     shift and go to state 66
    boolean_value                  shift and go to state 39

state 34

    (40) expression -> NO . expression
    (28) expression -> . expression MAS expression
    (29) expression -> . expression MENOS expression
    (30) expression -> . expression POR expression
    (31) expression -> . expression ENTRE expression
    (32) expression -> . expression MAYORQUE expression
    (33) expression -> . expression MENORQUE expression
    (34) expression -> . expression MAYOR_IGUAL expression
    (35) expression -> . expression MENOR_IGUAL expression
    (36) expression -> . expression EQUIVALE expression
    (37) expression -> . expression DIFIERE expression
    (38) expression -> . expression O expression
    (39) expression -> . expression Y expression
    (40) expression -> . NO expression
    (41) expression -> . PARIZ expression PARDE
    (42) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (43) expression -> . IDENTIF
    (44) expression -> . NUMERO
    (45) expression -> . boolean_value
    (46) expression -> . MENOS expression
    (47) boolean_value -> . CIERTO
    (48) boolean_value -> . FALSO

    NO              shift and go to state 34
    PARIZ           shift and go to state 35
    ABRE_RPN        shift and go to state 36
    IDENTIF         shift and go to state 37
    NUMERO          shift and go to state 38
    MENOS           shift and go to state 33
    CIERTO          shift and go to state 40
    FALSO           shift and go to state 41

    expression                     shift and go to state 67
    boolean_value                  shift and go to state 39

state 35
